; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_dos-keyboard.c_UpdateKeyboard.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_dos-keyboard.c_UpdateKeyboard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@newk = common dso_local global i32 0, align 4
@keybuf = common dso_local global i64* null, align 8
@SCAN_LEFTCONTROL = common dso_local global i64 0, align 8
@SCAN_C = common dso_local global i64 0, align 8
@SIGINT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UpdateKeyboard() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @newk, align 4
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %23

6:                                                ; preds = %0
  %7 = load i32, i32* %2, align 4
  call void asm sideeffect "subl %eax,_newk\0A\09", "{ax},~{dirflag},~{fpsr},~{flags}"(i32 %7) #2, !srcloc !2
  %8 = load i64*, i64** @keybuf, align 8
  %9 = load i64, i64* @SCAN_LEFTCONTROL, align 8
  %10 = getelementptr inbounds i64, i64* %8, i64 %9
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %22

13:                                               ; preds = %6
  %14 = load i64*, i64** @keybuf, align 8
  %15 = load i64, i64* @SCAN_C, align 8
  %16 = getelementptr inbounds i64, i64* %14, i64 %15
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %13
  %20 = load i32, i32* @SIGINT, align 4
  %21 = call i32 @raise(i32 %20)
  br label %22

22:                                               ; preds = %19, %13, %6
  store i32 1, i32* %1, align 4
  br label %24

23:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %24

24:                                               ; preds = %23, %22
  %25 = load i32, i32* %1, align 4
  ret i32 %25
}

declare dso_local i32 @raise(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 321, i32 340}
